--- a/assets/post/core/helpers.css
+++ b/assets/post/core/helpers.css
@@ -8,9 +8,14 @@
 
 ============================================================================= */
 
-/* Dimensions =============================================================== */
+/* Dimensions and Positioning =============================================== */
 .full-width {
     width: 100% !important;
+}
+
+.sticky {
+    position: sticky;
+    top: 0;
 }
 
 /* Scroll =================================================================== */
