--- a/assets/post/components/dialog/dialog.css
+++ b/assets/post/components/dialog/dialog.css
@@ -47,9 +47,11 @@
     max-height: 80%;
     overflow: auto;
     transform: translate3d(-50%,100%,0);
+    transition: transform 250ms $global-easing 0ms;
 
     &.open {
         transform: translate3d(-50%,-50%,0);
+        transition: transform 250ms $global-easing 0ms;
     }
 
     @media $(p-tablet) {
@@ -81,9 +83,14 @@
     left: 0;
     position: fixed;
     transform: translate3d(0,100%,0);
+    opacity: 0;
+    transition: opacity 250ms $global-easing 0ms,
+                transform 0ms ease 250ms;
 
     &.open {
         transform: translate3d(0,0,0);
+        opacity: 1;
+        transition: opacity 250ms $global-easing 0ms;
     }
 
 }
