--- a/assets/post/components/navigation/navigation-sidebar.css
+++ b/assets/post/components/navigation/navigation-sidebar.css
@@ -54,6 +54,10 @@
     /* Panes */
     $sidebar-nav-pane-transition: transform 300ms $global-easing 0ms;
 
+        /* Panes: Indicators */
+        $sidebar-nav-indicator-offset: 0.5rem;
+        $sidebar-nav-indicator-size: 5px;
+
         /* Content Panes */
         $sidebar-nav-pane-padding--content: 2rem;
         $sidebar-nav-pane-border--content: 1px solid #ccc;
@@ -223,6 +227,10 @@ body.has-sidebar-nav {
         .sidebar-nav__item-link:not(.current):hover {
             background: $sidebar-nav-link-background--hover;
             color: $sidebar-nav-link-color--hover;
+        }
+
+        .sidebar-nav__item--logo .sidebar-nav__item-link:hover {
+            background: initial;
         }
 
     }
@@ -533,3 +541,43 @@ body.has-sidebar-nav {
     }
 
 }
+
+/* Pane Indicators ========================================================== */
+a[data-sidebar-pane],
+a[data-sidebar-level] {
+    position: relative;
+
+    &:after {
+        position: absolute;
+        right: $sidebar-nav-indicator-offset;
+        top: 50%;
+        transform: translate(0,-50%);
+        content: "";
+        display: block;
+        border: $sidebar-nav-indicator-size solid $sidebar-nav-pane-nav-link-color;
+        border-color: transparent transparent transparent $sidebar-nav-pane-nav-link-color;
+    }
+
+    &.current {
+
+        &:after {
+            border-color: transparent transparent transparent $sidebar-nav-pane-nav-link-color--hover;
+        }
+
+    }
+
+}
+
+    /* Pane Indicators: Hover */
+    .no-touchevents {
+
+        a[data-sidebar-pane]:hover,
+        a[data-sidebar-level]:hover {
+
+            &:after {
+                border-color: transparent transparent transparent $sidebar-nav-pane-nav-link-color--hover;
+            }
+
+        }
+
+    }
