--- a/assets/post/spec/typography.css
+++ b/assets/post/spec/typography.css
@@ -186,3 +186,8 @@ blockquote {
     }
 
 }
+
+/* Anchors ================================================================== */
+a {
+    outline: none;
+}
