--- a/assets/post/components/buttons/buttons.css
+++ b/assets/post/components/buttons/buttons.css
@@ -40,6 +40,7 @@ input[type="submit"] {
     -webkit-appearance: none;
     border: none;
     cursor: pointer;
+    outline: none;
 }
 
 /* Basic ==================================================================== */
