overlay close icon

--- a/assets/post/components/buttons/buttons.css
+++ b/assets/post/components/buttons/buttons.css
@@ -115,8 +115,9 @@ input[type="submit"],
 
     &.disabled,
     &[disabled] {
-        pointer-events: none;
+        pointer-events: fill;
         opacity: 0.35;
+        cursor: not-allowed;
     }
 
 }
