--- a/assets/post/components/dialog/dialog.css
+++ b/assets/post/components/dialog/dialog.css
@@ -77,6 +77,7 @@
 /* Overlay ================================================================== */
 .dialog__overlay {
     background: $dialog-overlay-background;
+    cursor: url('../icons/core-icon--close.svg'), auto;
     width: 100%;
     height: 100%;
     top: 0;
