--- a/assets/post/components/language/language-toggle-sidebar.css
+++ b/assets/post/components/language/language-toggle-sidebar.css
@@ -43,7 +43,7 @@
         background: $language-toggle-background--sidebar;
         min-width: 100%;
         transform: translate3d(0,100%,0);
-        transition: transform 300ms $global-easing 0ms;
+        transition: transform $global-timing $global-easing 0ms;
 
         @media $menu-media-query {
             transform: translate3d(-100%,0,0);
@@ -55,7 +55,7 @@
 
         &.show {
             transform: translate3d(0,0,0);
-            transition: transform 300ms $global-easing 0ms;
+            transition: transform $global-timing $global-easing 0ms;
         }
 
         /* Basic: Items */
