max widths for image wrappers

--- a/assets/post/components/content/wordpress-images.css
+++ b/assets/post/components/content/wordpress-images.css
@@ -38,6 +38,7 @@
 
 .wp-image__wrapper {
     margin: $wp-image-margin 0;
+    max-width: 100% !important;
 }
 
 /* Images =================================================================== */
