--- a/assets/post/components/buttons/buttons.css
+++ b/assets/post/components/buttons/buttons.css
@@ -115,7 +115,7 @@ input[type="submit"],
 
     &.disabled,
     &[disabled] {
-        pointer-events: fill;
+        pointer-events: none;
         opacity: 0.35;
         cursor: not-allowed;
     }
