--- a/assets/post/components/pagination/pagination-lazy.css
+++ b/assets/post/components/pagination/pagination-lazy.css
@@ -25,14 +25,14 @@
     .pagination--lazy .pagination__button.loading {
         opacity: 0.5;
         animation: breathe 1s infinite;
-        pointer-events: fill;
+        pointer-events: none;
         cursor: not-allowed;
     }
 
     /* State: All Loaded */
     .pagination--lazy .pagination__button.all-loaded {
         opacity: 0.5;
-        pointer-events: fill;
+        pointer-events: none;
         cursor: not-allowed;
     }
 
