--- a/assets/post/components/navigation/navigation-basic.css
+++ b/assets/post/components/navigation/navigation-basic.css
@@ -147,6 +147,11 @@
     list-style: none;
     margin: 0;
     padding: 0 0 0 1rem;
+    display: none;
+
+    &.open {
+        display: block;
+    }
 
     @media $menu-media-query {
         position: absolute;
